--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Bu, uygulamanın kendisini değil yalnızca bu ekrandan uygulama simgesini kaldırır.</string>
     <string name="close_app">Farklı bir uygulama başlatırken bu uygulamayı kapat</string>
     <string name="toggle_app_name">Uygulama adı görünürlüğünü değiştir</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Basit Uygulama Başlatıcı - Uygulamaları kolay ve hızlı bir şekilde başlatın</string>
