--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Ще бъде премахната само иконата на лаунчера, няма да се деинсталира самата програма.</string>
     <string name="close_app">Затвори програмата при стартиране на друга програма</string>
     <string name="toggle_app_name">Скрии или покажи името на програмата</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher - стартирайте програми лесно и бързо</string>
