--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Ez csak eltávolítja az indítót erről a rácsról, magát az alkalmazást nem távolítja el.</string>
     <string name="close_app">E alkalmazás bezárása egy másik indításakor</string>
     <string name="toggle_app_name">Toggle app name visibility</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Egyszerű alkalmazásindító – Gyorsindítás könnyedén</string>
