--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Questo rimuoverà solamente l\'icona del launcher dalla griglia, non disintallerà l\'applicazione.</string>
     <string name="close_app">Chiudi l\'applicazione quando se ne avvia un\'altra</string>
     <string name="toggle_app_name">Cambia la visibilità del nome dell\'app</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher — Lancia le apps facilmente</string>
