--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Будет удалена только иконка лаунчера, но не само приложение.</string>
     <string name="close_app">Закрыть это приложение при запуске другого</string>
     <string name="toggle_app_name">Переключить показ названия приложения</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher - запускайте приложения легко</string>
