--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Toto iba odstráni spúšťačku z tejto mriežky, neodinštaluje to samotnú apku.</string>
     <string name="close_app">Ukončiť túto aplikáciu pri spustení inej</string>
     <string name="toggle_app_name">Prepnúť viditeľnosť názvov apiek</string>
+    <string name="manage_visible_app_icons">Spravovať ikonky viditeľných apiek</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Jednoduchý spúšťač aplikácií - Nájdite apky rýchlo</string>
