--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">Це лише видалить значок запускача з цієї сітки, не деінсталює сам додаток.</string>
     <string name="close_app">Закрити цей додаток при запуску іншого</string>
     <string name="toggle_app_name">Перемкнути видимість імені програми</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Простий Лаунчер - Відкрити додатки легко &amp; швидко</string>
