--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -6,6 +6,7 @@
     <string name="remove_explanation">這只會從畫面移除啟動器圖標，不會解除安裝實際程式。</string>
     <string name="close_app">當啟動不同程式時，關閉此應用程式</string>
     <string name="toggle_app_name">開關 app 名顯示</string>
+    <string name="manage_visible_app_icons">Manage visible app icons</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher - 輕鬆快速地啟動應用程式</string>
