--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,7 +6,7 @@
     <string name="remove_explanation">Cette action ne fera que supprimer l\'icône du lanceur de cette liste et ne désinstallera pas l\'application.</string>
     <string name="close_app">Fermer cette application lors du lancement d\'une autre</string>
     <string name="toggle_app_name">Changer la visibilité du nom de l\'appli</string>
-    <string name="manage_visible_app_icons">Manage visible app icons</string>
+    <string name="manage_visible_app_icons">Gérer les icônes d\'application visibles</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Lanceur d\'applications simple – Lancez des applications facilement et rapidement</string>
