--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,7 +6,7 @@
     <string name="remove_explanation">Isso removerá apenas o ícone do inicializador desta grade, não desinstalará o aplicativo.</string>
     <string name="close_app">Fechar este aplicativo ao abrir outro</string>
     <string name="toggle_app_name">Alternar a visibilidade do nome do aplicativo</string>
-    <string name="manage_visible_app_icons">Manage visible app icons</string>
+    <string name="manage_visible_app_icons">Gerenciar ícones de aplicativos visíveis</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Inicializador de Apps Simples - Inicie Apps Rápido</string>
