--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -7,10 +7,8 @@
     <string name="close_app">סגור אפליקציה זו בעת הפעלת אפליקציה אחרת</string>
     <string name="toggle_app_name">החלף את נראות שם האפליקציה</string>
     <string name="manage_visible_app_icons">נהל סמלי אפליקציה גלויים</string>
-    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
-    <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">משגר אפליקציות פשוט - הפעל אפליקציות בקלות ובמהירות</string>
-    <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">מחזיק פשוט לאפליקציות מועדפות לניהול סמלים של משגר אפליקציות בקלות &amp; במהירות</string>
-    <string name="app_long_description"> זה לא משגר אמיתי, רק עטיפה של אייקוני האפליקציה האהובים עליך להפעלה מהירה. אתה יכול בקלות להוסיף כל משגר אפליקציות, כך שלעולם לא תצטרך להחליק בין אפליקציות חסרות תועלת כדי למצוא את האפליקציה שאתה צריך. אתה יכול גם לשנות את שמות המשגרים כרצונך. ישנה אפשרות לסגור את האפליקציה עצמה בהפעלת אפליקציה אחרת לניווט קל. אנחנו לא יכולים להסיר את ההתקנה של אפליקציות מערכת לא רצויות, אתה יכול פשוט להסיר את הסמלים שלהם ולהתעלם מהם. זה מגיע עם עיצוב חומר וערכת נושא כהה כברירת מחדל, מספק חווית משתמש נהדרת לשימוש קל. היעדר גישה לאינטרנט נותן לך יותר פרטיות, אבטחה ויציבות מאשר אפליקציות אחרות. אינו מכיל פרסומות או הרשאות מיותרות. זה קוד פתוח לחלוטין, מספק צבעים הניתנים להתאמה אישית. <b>בדוק את החבילה המלאה של כלים פשוטים כאן:</b> https://www.simplemobiletools.com <b>פייסבוק:</b> https://www.facebook.com/simplemobiletools <b>Reddit :</b> https://www.reddit.com/r/SimpleMobileTools </string>
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
