--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -7,4 +7,8 @@
     <string name="close_app">Close this app at launching a different one</string>
     <string name="toggle_app_name">Toggle app name visibility</string>
     <string name="manage_visible_app_icons">Manage visible app icons</string>
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
