--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -7,6 +7,9 @@
     <string name="close_app">മറ്റൊരു ആപ്പ് തുറക്കുമ്പോൾ ദയവായി ഈ ആപ്പ് അടക്കുക</string>
     <string name="toggle_app_name">ആപ്പിന്റെ പേര് കാണാനായി ടോഗിൾ ചെയുക</string>
     <string name="manage_visible_app_icons">ദൃശ്യമായ ആപ്പ് ഐക്കണുകൾ മാനേജുചെയ്യുക</string>
+    <!-- FAQ -->
+    <string name="faq_1_title">Can I make this app the default launcher?</string>
+    <string name="faq_1_text">Nope, you cannot as this is just a basic app icon holder. For a real home screen launcher get our other app &lt;a href=https://play.google.com/store/apps/details?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
     <!--
         Haven't found some strings? There's more at
         https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
