--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -7,4 +7,7 @@
     <string name="close_app">다른 앱을 시작할 때이 앱을 닫습니다.</string>
     <string name="toggle_app_name">앱 이름 표시 여부 전환</string>
     <string name="manage_visible_app_icons">표시되는 앱 아이콘 관리</string>
+    <!-- FAQ -->
+    <string name="faq_1_title">Can I make this app the default launcher?</string>
+    <string name="faq_1_text">Nope, you cannot as this is just a basic app icon holder. For a real home screen launcher get our other app &lt;a href=https://play.google.com/store/apps/details?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
 </resources>
