--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -7,4 +7,7 @@
     <string name="close_app">Затвори ову апликацију при покретању друге апликације</string>
     <string name="toggle_app_name">Искључи видљивост имена апликације</string>
     <string name="manage_visible_app_icons">Управљање видљивим иконама апликација</string>
+    <!-- FAQ -->
+    <string name="faq_1_title">Can I make this app the default launcher?</string>
+    <string name="faq_1_text">Nope, you cannot as this is just a basic app icon holder. For a real home screen launcher get our other app &lt;a href=https://play.google.com/store/apps/details?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
 </resources>
