--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -3,13 +3,13 @@
     <string name="app_name">Απλός Εκκινητής Εφαρμογών</string>
     <string name="app_launcher_name">Εκκινητής Εφαρμογών</string>
     <string name="enter_launcher_name">Παρακαλώ εισάγετε ένα όνομα εκκινητή</string>
-    <string name="remove_explanation">Αυτό, απλά, θα αφαιρέσει το εικονίδιο Εκκινητή από αυτό το πλαίσιο. Δεν θα απεγκατασταθεί την ίδια την εφαρμογή.</string>
+    <string name="remove_explanation">Αυτό, απλά, θα αφαιρέσει το εικονίδιο Εκκινητή από αυτό το πλαίσιο. Δεν θα απεγκατασταθεί η ίδια η εφαρμογή.</string>
     <string name="close_app">Κλείστε αυτήν την εφαρμογή ξεκινώντας μια διαφορετική</string>
     <string name="toggle_app_name">Εναλλαγή προβολής ονόματος εφαρμογής</string>
     <string name="manage_visible_app_icons">Διαχείριση προβολής εικονιδίων εφαρμογών</string>
     <!-- FAQ -->
-    <string name="faq_1_title">Can I make this app the default launcher?</string>
-    <string name="faq_1_text">Nope, you cannot as this is just a basic app icon holder. For a real home screen launcher get our other app &lt;a href=https://play.google.com/store/apps/details?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
+    <string name="faq_1_title">Μπορώ να κάνω αυτή την εφαρμογή προεπιλεγμένο Εκκινητή;</string>
+    <string name="faq_1_text">Όχι, δεν μπορείτε, καθώς πρόκειται απλώς για μια βασική θήκη εικονιδίων εφαρμογών. Για έναν πραγματικό Εκκινητή αρχικής οθόνης πάρετε την άλλη μας εφαρμογή &lt;a href=https://play.google.com/store/apps/details?id=com.simplemobiletools.launcher&gt;Απλός Εκκινητής&lt;/a&gt;.</string>
     <!--
         Haven't found some strings? There's more at
         https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
