--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -7,6 +7,11 @@
     <string name="close_app">Đóng ứng dụng này khi khởi chạy một ứng dụng khác</string>
     <string name="toggle_app_name">Bật/tắt hiển thị tên app</string>
     <string name="manage_visible_app_icons">Quản lý icon app</string>
+    <!-- FAQ -->
     <string name="faq_1_title">Tôi có thể dùng app này như launcher mặc định không\?</string>
     <string name="faq_1_text">Không, bạn không thể vì đây cơ bản chỉ nơi chứa các icon để chạy app. Để dùng home screen launcher thực hãy tải xuống app khác của chúng tôi &lt;a href=https://play.google.com/store/apps/details\?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
