--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Simple App Launcher</string>
+    <string name="app_launcher_name">App Launcher</string>
+    <string name="enter_launcher_name">Mesedez, sartu izen bat jaurtitzailearentzat</string>
     <string name="remove_explanation">This will just remove the launcher icon from this grid, not uninstall the actual app.</string>
     <string name="close_app">Close this app at launching a different one</string>
-    <string name="faq_1_text">Nope, you cannot as this is just a basic app icon holder. For a real home screen launcher get our other app &lt;a href=https://play.google.com/store/apps/details\?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
-    <string name="app_launcher_name">App Launcher</string>
-    <string name="faq_1_title">Can I make this app the default launcher\?</string>
     <string name="toggle_app_name">Toggle app name visibility</string>
-    <string name="app_name">Simple App Launcher</string>
     <string name="manage_visible_app_icons">Manage visible app icons</string>
-    <string name="enter_launcher_name">Mesedez, sartu izen bat jaurtitzailearentzat</string>
+    <!-- FAQ -->
+    <string name="faq_1_title">Can I make this app the default launcher?</string>
+    <string name="faq_1_text">Nope, you cannot as this is just a basic app icon holder. For a real home screen launcher get our other app &lt;a href=https://play.google.com/store/apps/details?id=com.simplemobiletools.launcher&gt;Simple Launcher&lt;/a&gt;.</string>
+
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
